# search-agent-analytics

./: .gitignore  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
docker/: Dockerfile
src/analysis/: agent_drift.py  funnel_conversion.py  match_quality.py
src/ingestion/: generate_data.py  load_to_db.py
src/reporting/: charts.py  memo_template.md
src/utils/: config.py  db.py
streamlit/: config.toml
tests/: test_drift.py  test_funnel.py  test_match_quality.py
