[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "job-search-agent-analytics"
version = "0.1.0"
description = "Analytics pipeline for monitoring AI job search agent performance"
authors = [{ name = "Sajan Shergill" }]
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Streamlit layout uses compact one-line `with col:` blocks and long chart calls.
"dashboard/app.py" = ["E501", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"